--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
   <h1>🎤 Moshaereh Game</h1>
   <button id="start-btn">🎙️ Start Listening</button>
+  <div id="expected-letter" style="margin-top: 10px; font-weight: bold;"></div>
+
   <button id="speak-btn">🗣️ AI Speak Verse</button>
 
   <script type="module" src="/src/main.ts"></script>
