--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html lang="fa">
 <head>
   <style>
+    @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .bubble {
+    animation: fadeInUp 0.4s ease both;
+    transition: background-color 0.3s ease;
+  }
     #verse-history {
       display: flex;
       flex-direction: column;
