improve bubbles edited

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
   <button id="start-btn">🎙️ Start Listening</button>
   <div id="expected-letter" style="margin-top: 10px; font-weight: bold;"></div>
   <h2>Guess The Verse!</h2>
-  <div id="verse history"></div>
-  <button id="start-btn">▶️ Start / Next Turn</button>
+  <div id="verse-history"></div>
   <button id="restart-btn">🔄 Restart</button>
 
   <button id="speak-btn">🗣️ AI Speak Verse</button>
