--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
   <meta charset="UTF-8" />
   <title>Moshaereh Game</title>
 </head>
+
 <body>
+
   <h1>🎤 Moshaereh Game</h1>
+  <div id="score-display" style="font-weight: bold; margin-top: 10px;">
+    🧑 Your Score: <span id="user-score">0</span>
+  </div>
   <button id="start-btn">🎙️ Start Listening</button>
   <div id="expected-letter" style="margin-top: 10px; font-weight: bold;"></div>
   <h2>Guess The Verse!</h2>
