--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <h1>🎤 Moshaereh Game</h1>
   <div id="score-display" style="font-weight: bold; margin-top: 10px;">
     🧑 Your Score: <span id="user-score">0</span>
+    🤖 AI Score: <span id="ai-score">0</span>
   </div>
   <button id="start-btn">🎙️ Start Listening</button>
   <div id="expected-letter" style="margin-top: 10px; font-weight: bold;"></div>
