--- a/index.html
+++ b/index.html
@@ -2,6 +2,40 @@
 <html lang="fa">
 <head>
   <style>
+    body.theme-persian {
+  background-color: #fdf6e3;
+  color: #4b2e2e;
+  font-family: 'Garamond', serif;
+  background-image: url('https://www.transparenttextures.com/patterns/paper-fibers.png');
+  background-size: cover;
+  transition: background 0.3s ease;
+}
+
+.theme-persian .bubble.ai {
+  background-color: #fbe9e7;
+  color: #6d4c41;
+  font-family: 'Garamond', serif;
+  font-style: italic;
+  border-right: 4px solid #d84315;
+}
+
+.theme-persian .bubble.user {
+  background-color: #f0e4d7;
+  color: #4b2e2e;
+  font-family: 'Garamond', serif;
+  border-left: 4px solid #8d6e63;
+}
+body.theme-light { background: #fff; color: #222; }
+body.theme-dark { background: #121212; color: #eee; }
+body.theme-persian {
+  background-color: #fdf6e3;
+  color: #4b2e2e;
+  font-family: 'Garamond', serif;
+  background-image: url('https://www.transparenttextures.com/patterns/paper-fibers.png');
+  background-size: cover;
+}
+
+
     @keyframes fadeInUp {
     from {
       opacity: 0;
@@ -52,6 +86,13 @@
 <body>
 
   <h1>🎤 Moshaereh Game</h1>
+  <label for="theme-select" style="font-weight: bold;">🎨 Theme:</label>
+<select id="theme-select">
+  <option value="light">Light</option>
+  <option value="dark">Dark</option>
+  <option value="persian">Persian</option>
+</select>
+
   <div id="score-display" style="font-weight: bold; margin-top: 10px;">
     🧑 Your Score: <span id="user-score">0</span>
     🤖 AI Score: <span id="ai-score">0</span>
